# bevy_erm

./: Cargo.toml  README.md  Todo.md
crates/bevy_erm_core/: Cargo.toml  README.md
crates/bevy_erm_core/src/: database_entity.rs  database_query.rs  database_resource.rs  lib.rs
crates/bevy_erm_derive/: Cargo.toml  ReadMe.md
crates/bevy_erm_derive/src/: lib.rs
crates/bevy_erm_derive/tests/: test.rs
examples/: marketplace.rs
examples/marketplace/: ReadMe.md  components.rs  events.rs  main.rs  queries.rs  resources.rs  systems.rs
src/: .env  database_entity.rs  database_query.rs  database_resource.rs  lib.rs  main.rs  other_database_query.rs  plugin.rs
src/schedule/: schedule.rs
src/schedule/executor/: lazy_loaded.rs  mod.rs
tests/: mod.rs
