[package]
edition = "2021"
name = "bevy_erm_core"
version = "0.0.1"
description = "A entity relational mapper"
readme = "README.md"
keywords = [
    "ecs",
    "bevy",
    "orm",
]
repository = "https://github.com/dimpdash/bevy_erm"
license = "Apache-2.0"

[[examples]]
name = "marketplace"


[dependencies]
async-trait = "0.1.77"
bevy_ecs = "0.12.1"
bevy_mod_index = "0.3.0"
casey = "0.4.0"
futures = "0.3.30"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.36.0", features = ["full"] }
generational-arena = "0.2.9"
bevy_reflect = "0.12.1"
bevy_ecs_macros = "0.12.1"
bevy_utils = "0.12.1"

[dev-dependencies]
prettytable-rs = "0.10.0"
